--- a/src/components/Stories.css
+++ b/src/components/Stories.css
@@ -18,7 +18,7 @@
 }
 
 .active {
-  background: #f9dbba;
+  background: #00ff99;
   color: #10375c;
 }
 
@@ -39,4 +39,3 @@
   justify-content: center;
   color: white;
 }
-
